2005-06-09  Eric Anholt  <anholt@FreeBSD.org>

	* ati.c:
	* ati.h:
	* ati_draw.c: (ATIWaitMarker), (ATIGetOffsetPitch),
	(ATIUploadToScreen), (ATIUploadToScratch), (ATIDrawInit),
	(ATIDrawEnable):
	* ati_dri.c: (ATIDRISwapContext):
	* ati_video.c: (R128DisplayVideo), (RadeonDisplayVideo):
	- Replace the syncAccel hook in the kdrive structure with a pair of
	  hooks in the kaa structure: markSync and waitMarker.  The first, if
	  set, returns a hardware-dependent marker number which can then be
	  waited for with waitMarker.  If markSync is absent (which is the case
	  on all drivers currently), waitMarker must wait for idle on any given
	  marker number.  The intention is to allow for more parallelism when
	  we get downloading from framebuffer, or more fine-grained idling.
	- Replace the KdMarkSync/KdCheckSync functions with kaaMarkSync and
	  kaaWaitSync.  These will need to be refined when KAA starts being
	  smart about using them.  Merge kpict.c into kasync.c since kasyn.c has
	  all the rest of these fallback funcs.
	- Restructure all drivers to initialize a KaaInfo structure by hand
	  rather than statically in dubious order.
	- Whack the i810 driver into shape in hopes that it'll work after this
	  change (it certainly wouldn't have before this).  Doesn't support my
	  i845 though.
	- Make a new KXV helper to avoid duplicated code to fill the region
	  with the necessary color key.  Use it in i810 and mach64 (tested).

2005-02-28  Keith Packard  <keithp@keithp.com>

	* ati_reg.h:
	Add macrovision register defines

2005-01-24 19:37  anholt

	* ati_dma.c, ati_draw.c, ati_reg.h: Finish converting RB2D_DSTCACHE
	  to RB3D_DSTCACHE.  Remove an extra pixel cache flush in the idle
	  function.  Init an extra reg for r200, and annotate the
	  TCL_BYPASS better.  Also, clean up some style nits from the last
	  commit.

2005-01-24 18:39  keithp

	* ati.h, ati_draw.c, ati_reg.h, radeon_composite.c: Add tracing.