@@ -186,7 +186,6 @@ KdCardFuncs ephyrFuncs = {
     
     0,			    /* initAccel */
     0,			    /* enableAccel */
-    0,			    /* syncAccel */
     0,			    /* disableAccel */
     0,			    /* finiAccel */
     
