@@ -87,7 +87,6 @@ KdCardFuncs	fbdevFuncs = {
     
     0,			    /* initAccel */
     0,			    /* enableAccel */
-    0,			    /* syncAccel */
     0,			    /* disableAccel */
     0,			    /* finiAccel */
     
