@@ -1,5 +1,12 @@
 2005-06-09  Eric Anholt  <anholt@FreeBSD.org>
 
+	* neo_draw.c:
+	* neomagic.c: (neoScreenInit):
+	Perform a warnings sweep on hw/kdrive.  A number of these were my fault,
+	but some come from others.
+
+2005-06-09  Eric Anholt  <anholt@FreeBSD.org>
+
 	* neo_draw.c: (neoWaitMarker), (neoDrawInit):
 	* neomagic.c:
 	* neomagic.h:
